# v2.blog.lucaskaique.com.br

./: .env.example  .gitignore  Cargo.toml  PERFORMANCE.md  README.md  TWIR_CLI_USAGE.md  install-twir.sh  middleware.ts  next-seo.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json  twir  typography.ts
.cargo/: config.toml
content/: about.yml  projects.yml  resume.yml  setup.yml  site.yml  speaking.yml
posts/: 12-dicas-de-javascript-que-todo-desenvolvedor-deve-conhecer.md  3-tecnicas-pessoais-que-transformaram-minha-carreira-em-desenvolvimento.md  a-saga-do-tb-303-do-esquecimento-ao-estrelato-eletronico.md  como-filtrar-um-objeto-no-javascript.md  como-publicar-um-projeto-next-js-no-github-pages.md  comprei-uma-ranger.md  configurando-controle-xbox-one-no-arch-linux.md  descomplicando-o-graphql-no-wordpress-qual-e-o-significado-de-edges-e-node.md  dominando-os-atalhos-do-javascript.md  dstrb-0130-lucaos-kaique.md  example-multilingual-post.md  lidando-com-projetos-wordpress-quando-voce-nao-e-especialista-wpgraphql-ou-rest-api-para-headless-wordpress.md  my-git-cheatsheet.md  o-impacto-revolucionário-de-softwares-p-2-p-na-cena-musical.md  oh-my-zsh-git-aliases-guia-completo.md  quando-usar-ssg-vs-ssr-no-next-js-uma-duvida-sincera-para-um-caso-real.md  react-voce-esta-usando-useeffect-errado.md  teste.md  testes-integracao-rust-testcontainers.md  this-week-in-rust-640.md  this-week-in-rust-641.md  this-week-in-rust-642.md  this-week-in-rust-643.md  uk-garage-em-2023.md
public/: config.yml  (+3 more)
(+84 files in other folders)
