[package]
name = "twir"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "twir"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = "0.4"
regex = "1.11"
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
html-escape = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
